# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gw"
version = "0.1.0"
authors = ["martinmoeller <martinmoeller>"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
ctrlc = "3.1.3"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[profile.release]
lto = true
