# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gradlew-locator"
version = "0.1.3"
description = "gw - gradlew convenience - gdub clone"
homepage = "https://github.com/normartin/rust-gradlew-locator"
documentation = "https://github.com/normartin/rust-gradlew-locator"
repository = "https://github.com/normartin/rust-gradlew-locator"
authors = ["Martin Moeller"]
license = "MIT"
readme = "readme.md"
categories = ["development-tools"]
keywords = ["gradle", "gradlew", "cli", "gdub"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
ctrlc = "3.1.3"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[profile.release]
lto = true
