# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gw"
version = "0.2.0"
description = "gw - gradlew convenience - gdub clone"
homepage = "https://github.com/normartin/rust-gradlew-locator"
documentation = "https://github.com/normartin/rust-gradlew-locator"
repository = "https://github.com/normartin/rust-gradlew-locator"
authors = ["Martin Moeller"]
license = "MIT"
readme = "readme.md"
categories = ["development-tools"]
keywords = ["gradle", "gradlew", "cli", "gdub"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
ctrlc = "3.2.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
